# ollama-dummy

./: CMakeLists.txt  build.sh  main.cpp
dummy_response/: api_chat_final.json  api_chat_streaming.json  api_ps.json  api_tags.json
include/: constants.hpp
include/api/: endpoints.hpp  handlers.hpp
src/: server.cpp
src/api/: handlers.cpp
